update link logo

--- a/form-pemesanan.html
+++ b/form-pemesanan.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="home.html" aria-label="Eduwisata Kolah Banyu Beranda">
-        <img src="assets/images/logo/LOGO PANJANG.png" alt="Logo Eduwisata Kolah Banyu" style="height: 40px;">
-      </a>
+      <a class="logo" href="#" aria-label="Eduwisata Kolah Banyu Beranda">
+        <img src="img/LOGO PANJANG.png" alt="Logo Eduwisata Kolah Banyu" style="height: 40px;">
+        </a>
       <nav class="nav">
-        <a href="home.html#paket">Paket Wisata</a>
-        <a href="#fasilitas">Fasilitas</a>
-        <a href="#galeri">Galeri</a>
+        <a href="#paket">Paket Wisata</a>
+        <a href="/profil.html">Tentang Kami</a>
         <a href="#kontak">Kontak</a>
       </nav>
     </div>
@@ -75,7 +75,7 @@
       <div class="footer-grid">
         <div class="footer-column">
           <h4>
-            <img src="assets/images/logo/LOGO EDUWISTA BULAT.png" alt="Logo Kolah Banyu">
+            <img src="img/LOGO EDUWISTA BULAT.png" alt="Logo Kolah Banyu">
             Eduwisata Kolah Banyu
           </h4>
           <p>Paket wisata edukatif terbaik dengan pelayanan profesional, destinasi menarik, dan kenangan tak terlupakan.</p>
