--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
   <!-- Header -->
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="#" aria-label="Eduwisata Kolah Banyu Beranda">
-        <img src="/assets/images/logo/LOGO PANJANG.png" alt="Logo Eduwisata Kolah Banyu" style="height: 40px;">
+        <img src="img/LOGO PANJANG.png" alt="Logo Eduwisata Kolah Banyu" style="height: 40px;">
         </a>
       <nav class="nav">
         <a href="#paket">Paket Wisata</a>
@@ -125,7 +126,7 @@
       <div class="footer-grid">
         <div class="footer-column">
           <h4>
-            <img src="assets/images/logo/LOGO EDUWISTA BULAT.png" alt="Logo Kolah Banyu">
+            <img src="img/LOGO EDUWISTA BULAT.png" alt="Logo Kolah Banyu">
             Eduwisata Kolah Banyu
           </h4>
           <p>Paket wisata edukatif terbaik dengan pelayanan profesional, destinasi menarik, dan kenangan tak terlupakan.</p>
